<resources>
    <string name="instagram">Instagram</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="thanks">Thanks</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try again</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_im_sure">"Yes, I'm sure"</string>
    <string name="loading">Loading...</string>
    <string name="dismiss">Dismiss</string>
    <string name="failed">Failed</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="unknown_error_occured">An unknown error occurred</string>
    <string name="network_error">An unknown network error has occurred.</string>
    <string name="request_error">"Sorry, we couldn't complete your request. Please try again in a moment."</string>
    <string name="could_not_refresh_feed">"Couldn't refresh feed"</string>
    <string name="learn_more">Learn More</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="dialog_ok">OK</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_flash_mode_off">off</string>
    <string name="pref_camera_flash_mode_on">on</string>
    <string name="pref_camera_flash_mode_auto">auto</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_focusmode_default">continuous-picture</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing...</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="capture_source">Pick a Source</string>
    <string name="processing">Processing...</string>
    <string name="unable_to_load_image">Unable to load image</string>
    <string name="not_installed_correctly">Instagram is not installed correctly on this phone due to lack of space. Please reinstall to be able to post content.</string>
    <string name="edit">Edit</string>
    <string name="video_not_enough_space_for_recording">Whoops! Please free up at least %dMB of space before recording video.</string>
    <string name="video_press_and_hold">Press and hold to record</string>
    <string name="video_import">Trim &amp; Crop</string>
    <string name="video_choose_cover_frame">Choose a cover frame</string>
    <string name="video_minimum_warning">Record at least to here</string>
    <string name="discard_video">Discard Video?</string>
    <string name="discard_video_close">If you close the camera now, your video will be discarded.</string>
    <string name="discard_video_discard_button">Discard</string>
    <string name="discard_video_keep_button">Keep</string>
    <string name="video_tap_to_continue">Tap to continue</string>
    <string name="video_failed_to_start">Before recording video, check your SD card and disconnect your phone from your computer.</string>
    <string name="video_import_too_long">Video too long. Please try importing a shorter clip</string>
    <string name="video_import_too_short">Video too short. Please try importing a longer clip</string>
    <string name="video_import_unsupported_file_type">The video file type you have chosen is unsupported. Please try again.</string>
    <string name="video_import_scrollable_nux">Drag clip to choose start time</string>
    <string name="video_import_minimum_warning">Videos must be 3 seconds or more</string>
    <string name="video_import_remote_url">We could not process this video</string>
    <string name="video_import_min_requirements">Unfortunately this device does not meet the minimum requirements to upload video.</string>
    <string name="trimmed_video_nux_video_length">Instagram videos are 15 seconds</string>
    <string name="trimmed_video_nux_tap_to_trim">Tap to trim your video</string>
    <string name="unfollow_private_user_x">"If you change your mind, you'll have to request to follow @%s again."</string>
    <string name="unfollow_public_user_x">Unfollow @%s?</string>
    <string name="unfollow">Unfollow</string>
    <string name="following_button_following">Following</string>
    <string name="following_button_requested">Requested</string>
    <string name="following_button_follow">Follow</string>
    <string name="discover_more_accounts_to_follow">Discover more accounts to follow</string>
    <string name="megaphone_dismiss">Dismiss</string>
    <string name="suggestions_for_you">Suggestions For You</string>
    <string name="view_all">View All</string>
    <string name="tap_on_the_camera_full">Tap on the camera to share your first photo or video.</string>
    <string name="tap_on_the_camera_bold">Tap on the camera</string>
    <string name="tap_to_reload">"Couldn't load image. Tap to retry."</string>
    <string name="news">News</string>
    <string name="news_view_action_bar_following_button">Following</string>
    <string name="news_view_action_bar_you_button">You</string>
    <string name="newsfeed_activity_header">Activity</string>
    <string name="newsfeed_new_activity_header">New Activity</string>
    <string name="newsfeed_older_header">Older</string>
    <string name="newsfeed_group_request_title">Follow Requests</string>
    <string name="newsfeed_group_request_subtitle">Approve or ignore requests</string>
    <string name="newsfeed_you_empty_view_title">Recent Activity on your posts</string>
    <string name="newsfeed_following_empty_view_title">Activity from people you follow</string>
    <string name="newsfeed_you_empty_view_subtitle">"When someone comments on or likes one of your photos or videos, you'll see it here."</string>
    <string name="newsfeed_following_empty_view_subtitle">"When someone you follow comments on or likes a post, you'll see it here."</string>
    <string name="newsfeed_failed_title">Connection Error</string>
    <string name="newsfeed_failed_subtitle">"We're sorry, we cannot provide
News at this time."</string>
    <string name="following_confirmation_toast">Following @%s</string>
    <string name="unfollowing_confirmation_toast">Unfollowed @%s</string>
    <string name="requested_following_confirmation_toast">Requested to follow @%s</string>
    <string name="requested_cancel_confirmation_toast">Follow Request Canceled</string>
    <string name="follow_requests_title">Follow Requests</string>
    <string name="x_problems">%s seems to be having problems right now. Please try again in a few moments.</string>
    <string name="flag_report_abuse">Report Abuse</string>
    <string name="could_not_submit_flag">"We couldn't submit your flag at the moment. Please try again in a minute."</string>
    <string name="this_user_is_private">This user is private.</string>
    <string name="no_posts_yet">No photos or videos yet!</string>
    <string name="geo_ip_blocked">Access to this account has been restricted in your country for legal reasons.</string>
    <string name="geo_ip_blocked_learn_more">Learn more</string>
    <string name="app_name">Instagram</string>
    <string name="options">Options</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="optional">optional</string>
    <string name="all_items_loaded">All items loaded</string>
    <string name="sharing_disabled">Sharing Disabled</string>
    <string name="logging_out">Logging out...</string>
    <string name="double_tap_to_like_hint">Tip: Double-tap on posts to like them!</string>
    <string name="no_users_found">No users found.</string>
    <string name="report_inappropriate">Report Inappropriate</string>
    <string name="search_for_x">Search for \"%s\"</string>
    <string name="searching">Searching...</string>
    <string name="must_be_logged_in">You must log in to view this item.</string>
    <string name="no_posts_yet_self_fragment">Start capturing and sharing your moments</string>
    <string name="post_deleted">This post has been deleted</string>
    <string name="copy_profile_url">Copy Profile URL</string>
    <string name="copy_profile_url_confirmation">"This user's sharable profile link has been copied to the clipboard."</string>
    <string name="unable_to_start">There was a problem starting Instagram. Please uninstall and re-install Instagram and then try again.</string>
    <string name="must_login_before_share">You must login before you can share on Instagram</string>
    <string name="tumblr_login_error">"Please check your e-mail and password. If you're sure they're correct, Tumblr may be temporarily experiencing problems. Please try again in a few minutes."</string>
    <string name="service_login_error">Please check your %s username and password</string>
    <string name="password_security_message">We never store your password.</string>
    <string name="followInstagram">Follow @instagram</string>
    <string name="followInstagramBlog">Follow blog.instagram.com</string>
    <string name="enter_caption">Add Description</string>
    <string name="add_people">Tag People</string>
    <string name="add_to_photo_map">Add to Photo Map</string>
    <string name="locating">Locating...</string>
    <string name="name_this_location">Name This Location</string>
    <string name="failed_to_detect_location">"Couldn't load location"</string>
    <string name="view_all_photos_on_map">View All</string>
    <string name="find_facebook_friends">Find your Facebook friends</string>
    <string name="find_friends_from_contacts">Find Contacts to Follow</string>
    <string name="dev_choose_a_host">Choose a Host</string>
    <string name="dev_choose_a_host_subtitle">Leave blank for default (i.instagram.com)</string>
    <string name="dev_choose_a_host_hint">sandbox, \"preprod\", or host</string>
    <string name="not_now">Not now</string>
    <string name="instagram_is_more_fun_with_friends">Instagram is more fun with friends!</string>
    <string name="follow_your_contacts">Follow your contacts to see their photos and videos.</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="website">Website</string>
    <string name="posts_are_private">Posts are Private</string>
    <string name="toggle_privacy_help">"Turn privacy ON to approve follow requests. Your existing followers won't be affected."</string>
    <string name="private_information">Private Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="change_password">Change Password</string>
    <string name="sound">Sound</string>
    <string name="play_sound">Play Sound</string>
    <string name="sound_preference_explanation">You can always tap the speaker icon to hear audio.</string>
    <string name="video_preload_preference_title">Data Usage</string>
    <string name="video_preload_always">Preload Videos on Wifi or Cellular</string>
    <string name="video_preload_wifi">Preload on Wifi Only</string>
    <string name="video_preload_preference_explanation">Preloaded videos will start playing sooner.</string>
    <string name="video_saving_preference_title">Storage</string>
    <string name="video_saving">Save Videos After Posting</string>
    <string name="video_saving_preference_explanation">Saving videos to your phone uses more storage space.</string>
    <string name="directshare_title">Instagram Direct</string>
    <string name="directshare_inbox_empty">Send photos and videos directly to your friends. Only the people you send to can see these posts.</string>
    <string name="directshare_inbox_empty_call_to_action">Send a photo or video</string>
    <string name="nux_dayone_register_facebook">Register with Facebook</string>
    <string name="nux_dayone_register_email">Register with Email</string>
    <string name="nux_dayone_log_in">Log In</string>
</resources>