<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/row_text_padding" android:paddingBottom="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout style="@style/PaddedRow"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <com.instagram.ui.text.FreightSansTextView android:text="@string/sound" style="@style/RowHeaderText" />
            <include layout="@layout/row_header_divider" />
        </FrameLayout>
        <FrameLayout android:layout_height="@dimen/row_height_small" android:minHeight="@dimen/row_height_small" style="@style/PaddedRow">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/sound_row" android:paddingLeft="@dimen/row_text_padding" android:paddingRight="@dimen/row_text_padding" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textStyle="bold" android:paddingRight="@dimen/row_text_padding" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/play_sound" android:layout_weight="1.0" />
                <com.instagram.ui.widget.switchbutton.IgSwitch android:id="@id/sound_switch" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <include layout="@layout/row_divider" />
        </FrameLayout>
        <TextView android:textColor="@color/grey_light" android:padding="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" android:minHeight="@dimen/row_height_small" android:text="@string/sound_preference_explanation" android:lineSpacingExtra="4.0dip" />
        <FrameLayout android:paddingTop="@dimen/menu_separator_height" style="@style/PaddedRow">
            <com.instagram.ui.text.FreightSansTextView android:text="@string/video_preload_preference_title" style="@style/RowHeaderText" />
            <include layout="@layout/row_header_divider" />
        </FrameLayout>
        <RadioGroup android:id="@id/preload_options_radiogroup" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.instagram.ui.menu.CheckRadioButton android:id="@id/preload_options_always" android:layout_marginBottom="-1.0px" android:text="@string/video_preload_always" style="@style/IgSettingsRadioButton" />
            <View android:background="@color/grey_2" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" />
            <com.instagram.ui.menu.CheckRadioButton android:id="@id/preload_options_wifi" android:layout_marginBottom="-1.0px" android:text="@string/video_preload_wifi" style="@style/IgSettingsRadioButton" />
            <View android:background="@color/grey_2" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" />
        </RadioGroup>
        <TextView android:textColor="@color/grey_light" android:padding="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" android:text="@string/video_preload_preference_explanation" android:lineSpacingExtra="4.0dip" />
        <FrameLayout android:paddingTop="@dimen/menu_separator_height" style="@style/PaddedRow">
            <com.instagram.ui.text.FreightSansTextView android:text="@string/video_saving_preference_title" style="@style/RowHeaderText" />
            <include layout="@layout/row_header_divider" />
        </FrameLayout>
        <FrameLayout android:layout_height="@dimen/row_height_small" android:minHeight="@dimen/row_height_small" style="@style/PaddedRow">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/video_storage_row" android:paddingLeft="@dimen/row_text_padding" android:paddingRight="@dimen/row_text_padding" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textStyle="bold" android:paddingRight="@dimen/row_text_padding" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/video_saving" android:layout_weight="1.0" />
                <com.instagram.ui.widget.switchbutton.IgSwitch android:id="@id/video_save_switch" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <include layout="@layout/row_divider" />
        </FrameLayout>
        <TextView android:textColor="@color/grey_light" android:padding="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" android:minHeight="@dimen/row_height_small" android:text="@string/video_saving_preference_explanation" android:lineSpacingExtra="4.0dip" />
    </LinearLayout>
</ScrollView>