<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.instagram.common.ui.widget.spinner.SpinnerImageView android:layout_gravity="center" android:id="@id/loading_spinner" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/spinner_large" />
    <ScrollView android:id="@id/edit_profile_fields" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/full_name" android:nextFocusDown="@id/username" android:hint="@string/name" android:drawableLeft="@drawable/profile_glyph_name" android:imeOptions="actionNext" style="@style/FieldWithGlyph.WithMargin" />
            <FrameLayout style="@style/PaddedRow">
                <EditText android:id="@id/username" android:nextFocusDown="@id/website" android:hint="@string/username" android:capitalize="none" android:drawableLeft="@drawable/profile_glyph_username" android:inputType="textEmailAddress" android:imeOptions="actionNext" style="@style/FieldWithGlyph" />
                <com.instagram.ui.widget.spinner.RefreshSpinner android:layout_gravity="right|center" android:id="@id/username_spinner" android:visibility="gone" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="@dimen/row_text_padding" app:dark="true" />
            </FrameLayout>
            <EditText android:id="@id/website" android:nextFocusDown="@id/bio" android:hint="@string/website" android:drawableLeft="@drawable/profile_glyph_website" android:inputType="textUri" android:imeOptions="actionNext" style="@style/FieldWithGlyph.WithMargin" />
            <FrameLayout android:minHeight="@dimen/row_height_small" style="@style/PaddedRow">
                <ImageView android:paddingLeft="8.0dip" android:paddingTop="@dimen/row_text_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/profile_glyph_bio" />
                <EditText android:layout_gravity="center_vertical" android:id="@id/bio" android:paddingLeft="40.0dip" android:paddingTop="@dimen/row_text_padding" android:paddingRight="@dimen/row_text_padding" android:paddingBottom="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/bio" android:singleLine="false" android:maxLength="150" android:capitalize="sentences" android:lineSpacingMultiplier="1.2" android:inputType="textCapSentences|textMultiLine" />
            </FrameLayout>
            <FrameLayout android:paddingTop="12.0dip" style="@style/PaddedRow">
                <com.instagram.ui.text.FreightSansTextView android:text="@string/private_information" style="@style/RowHeaderText" />
                <include layout="@layout/row_header_divider" />
            </FrameLayout>
            <EditText android:id="@id/email" android:hint="@string/email" android:drawableLeft="@drawable/profile_glyph_email" android:inputType="textEmailAddress" android:imeOptions="actionNext" style="@style/FieldWithGlyph.WithMargin" />
            <FrameLayout android:id="@id/change_phone_button" android:background="@drawable/bg_simple_row" android:clickable="true" style="@style/PaddedRow">
                <TextView android:textStyle="bold" android:id="@id/phone" android:text="@string/phone" android:freezesText="true" android:drawableLeft="@drawable/profile_glyph_phone" style="@style/FieldWithGlyph" />
                <include layout="@layout/row_divider" />
            </FrameLayout>
            <FrameLayout android:id="@id/change_password_button" android:background="@drawable/bg_simple_row" android:clickable="true" style="@style/PaddedRow">
                <TextView android:textStyle="bold" android:text="@string/change_password" android:drawableLeft="@drawable/profile_glyph_password" style="@style/FieldWithGlyph" />
                <include layout="@layout/row_divider" />
            </FrameLayout>
            <Spinner android:id="@id/gender" android:background="@drawable/input_spinner_background" android:layout_width="fill_parent" android:layout_height="@dimen/row_height_small" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" />
            <FrameLayout android:layout_height="@dimen/row_height_small" style="@style/PaddedRow">
                <include layout="@layout/row_header_divider" />
            </FrameLayout>
            <FrameLayout android:id="@id/privacy_row" android:clickable="true" android:minHeight="@dimen/row_height_small" style="@style/PaddedRow">
                <LinearLayout android:gravity="center_vertical" android:layout_gravity="left|center" android:orientation="horizontal" android:paddingRight="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:padding="@dimen/row_text_padding" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/posts_are_private" android:layout_weight="1.0" />
                    <com.instagram.ui.widget.switchbutton.IgSwitch android:id="@id/privacy_switch" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <include layout="@layout/row_divider" />
            </FrameLayout>
            <TextView android:textColor="@color/grey_light" android:padding="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" android:text="@string/toggle_privacy_help" android:lineSpacingMultiplier="1.2" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>